<resources>
    <string name="app_name">ECommerceMobile</string>
    <string name="title_activity_main">ECommerceMobile</string>
    <string name="disp">Disponivel</string>
    <string name="vend">Vendidos</string>
    <string name="title_activity_produto_detail">ProdutoDetail</string>
    <string name="valor_compra">Valor Compra</string>
    <string name="qtde_disponivel">Qtde Disponível</string>
    <string name="detalhes_produto">Detalhes do Produto</string>
    <string name="preco_venda">Preço Venda</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="CONFIGURACOES">CONFIGURAÇÕES</string>
    <string name="valor">Valor</string>
    <string name="propriedade">Propriedade</string>
    <string name="configuracao">Configuração</string>
    <string name="sem_configuracoes">SEM CONFIGURAÇÕES CADASTRADAS</string>
    <string name="preco_compra">Preço Compra</string>
    <string name="valor_final_sem_taxas">Valor Final Sem Taxas</string>
    <string name="valor_liquido">Valor Líquido</string>
</resources>
