<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.ProdutoDetail"
    tools:showIn="@layout/activity_produto_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            android:enabled="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txtTextProdutoDetail"
                android:text="@string/qtde_disponivel" />

            <EditText
                style="@style/txInputProdutoDetail"
                android:enabled="false"
                android:id="@+id/inpQtdeDisponivel"
                 />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txtTextProdutoDetail"
                android:text="Qtde Ideal" />

            <EditText
                android:id="@+id/inpStockIdeal"
                style="@style/txInputProdutoDetail"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txtTextProdutoDetail"
                android:text="Qtde Vendidos" />

            <EditText
                android:id="@+id/inpQtdeVendidos"
                android:enabled="false"
                style="@style/txInputProdutoDetail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txtTextProdutoDetail"
                android:text="@string/preco_compra" />

            <EditText
                android:id="@+id/inpPrecoCompra"
                style="@style/txInputProdutoDetail"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txtTextProdutoDetail"
                android:text="@string/preco_venda" />

            <EditText
                android:id="@+id/inpPrecoVenda"
                android:enabled="false"
                style="@style/txInputProdutoDetail"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/txtTextProdutoDetail"
                android:text="@string/valor_liquido" />

            <EditText
                android:tooltipText="@string/valor_final_sem_taxas"
                android:id="@+id/inpValorLiquido"
                android:enabled="false"
                style="@style/txInputProdutoDetail"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>